--- a/stylesheet.css
+++ b/stylesheet.css
@@ -34,3 +34,5 @@ position:absolute; top: 80px; left: 50px}
 #paragraph4{position: absolute; top: 720px; left: 80px; right: 750px}
 
 #paragraph3{position: absolute; top: 550px; left: 930px}
+
+#paragraph5{position: absolute; top: 900px; left: 580px}
